Fixed index page CSS on mobile

--- a/assets/styles/index_styles.css
+++ b/assets/styles/index_styles.css
@@ -25,6 +25,10 @@ main figure img {
     border: 2px solid #222323;
 }
 
+nav {
+    display: flex;
+}
+
 nav a {
     margin-left: 10px;
     margin-right: 10px;
